Fixed layout issues for field, added alert

--- a/ui/src/components/modals/login/login.css
+++ b/ui/src/components/modals/login/login.css
@@ -9,7 +9,6 @@
 .log-reg-pop .modal-login form { } 
 
 .log-reg-pop .modal-login .form-group { position: relative;}
-.log-reg-pop .modal-login .form-control { height: auto; min-height: 35px; border: 1px solid #eaeaea; padding: 0 10px; background-color: #fff; font-size: 13px; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; padding-left: 40px; border-radius: 25px; } 
 
 .log-reg-pop .modal-login .form-control ~ svg { position: absolute; top: 12px; left: 15px; color: var(--style-3-color); } 
 
