--- a/ui/src/components/modals/register/register.css
+++ b/ui/src/components/modals/register/register.css
@@ -8,9 +8,6 @@
 
 .log-reg-pop .modal-login form { } 
 
-.log-reg-pop .modal-login .form-group { position: relative;}
-.log-reg-pop .modal-login .form-control { height: auto; min-height: 35px; border: 1px solid #eaeaea; padding: 0 10px; background-color: #fff; font-size: 13px; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; padding-left: 40px; border-radius: 25px; } 
-
 .log-reg-pop .modal-login .form-control ~ svg { position: absolute; top: 12px; left: 15px; color: var(--style-3-color); } 
 
 .log-reg-pop .btn-signin { border-radius: 25px; width: 100%; text-transform: uppercase; letter-spacing: 1.5px; background-color: var(--style-3-color); border: 1px solid var(--style-3-color); } 
